plugins {
    id 'com.android.application'
}

android {
    namespace 'com.example.rootlauncher'
    compileSdk 34

    defaultConfig {
        applicationId "com.example.rootlauncher"
        minSdk 24
        targetSdk 34
        versionCode 1
        versionName "1.0"
    }
    buildTypes {
        release {
            minifyEnabled false // 暂时关闭混淆，保证UI和功能100%稳定
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
}

dependencies {
    implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.10')
    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'androidx.activity:activity:1.7.2'
    implementation 'com.google.android.material:material:1.9.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'androidx.cardview:cardview:1.0.0'
}
